@@ -1,0 +1,4 @@
+$NetBSD: distinfo,v 1.1.1.1 2002/12/19 14:39:28 grant Exp $
+
+SHA1 (gimageview-0.2.10.tar.gz) = 635ed202a84539aa7c20ae0668a228bddcde949c
+Size (gimageview-0.2.10.tar.gz) = 1237171 bytes
